# 2023-ectf-uiuc

./: .gitignore  Cargo.toml  README.md  memory.x  openocd.gdb
car/: Makefile  README.md  build_car_eeprom.py
deployment/: Makefile  gen_secrets.py
docker_env/: Cargo.toml  build.rs  build_image.Dockerfile  memory.x  openocd.cfg
docker_env/.cargo/: config.toml
docker_env/src/: lib.rs  main.rs
docker_env/tivaware/driverlib/: wrapper.c
docs/: led.md  protocol.md  state.md
fob/: Makefile  README.md  build_fob_eeprom.py
host_tools/: EEPROM  Makefile  README.md  enable_tool  fob_stuff.py  key_test  package_manual.py  package_tool  pair_tool  pair_tool_custom.py  unlock_tool
python_tools/: generate_ids.py
src/: driverlib.rs  lib.rs  main.rs  tiva.rs
src/tiva/: board.rs  panic.rs
tivaware/: makedefs
tivaware/driverlib/: Makefile  mini.c  mini.h  wrapper.c  wrapper.h
