[package]
authors = ["Feyorsh <ghubs25@gmail.com>"]
edition = "2021"
readme = "README.md"
name = "sigpwny-ectf-2023"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
tm4c123x-hal = { version = "0.10.2", features = ["rt"] }
embedded-hal = "0.2.7"
linked_list_allocator = "0.10.4"

# have to use rand=0.7, rand_core=0.5, and rand_chacha=0.2 to match versions with ed25519-dalek
rand = { version = "0.7", default-features = false }
rand_core = { version = "0.5", default-features = false }
rand_chacha = { version = "0.2", default-features = false }
ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u32_backend", "rand"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.

[lib]
name = "tiva"
[[bin]]
name = "car"
[[bin]]
name = "fob"

[profile.dev]
opt-level = "s" # small binaries so they fit on the board

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s" # we want small binaries
panic = "abort"
