[package]
authors = ["SIGPwny <ctf@sigpwny.com>"]
edition = "2021"
readme = "README.md"
name = "sigpwny-ectf-2023"
version = "1.0.0"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = { version = "0.7.3", features = ["set-sp"] }
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
tm4c123x-hal = { version = "0.10.2", default-features = false }
embedded-hal = "0.2.7"

rand_chacha = { version = "0.3", default-features = false }
p256-cortex-m4 = { version = "0.1.0-alpha.6", default-features = false }
sha2 = { version = "0.10.6", default-features = false }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.

[lib]
name = "tiva"
[[bin]]
name = "car"
[[bin]]
name = "fob"

[profile.dev]
opt-level = "z" # small binaries so they fit on the board

[profile.release]
codegen-units = 1 # better optimizations
debug = false
strip = true # remove symbols
lto = true # better optimizations
opt-level = "z" # we want small binaries
panic = "abort"
